# OtakuMiraiPlugin

./: .gitignore  CMakeLists.txt  CMakeSettings.json
Public/: Config.h.in
Source/Private/: MiraiCP.cpp  OtakuEventManager.cpp  OtakuMiraiPlugin.cpp
Source/Private/CommandProcessors/: CommandProcessor_Echo.cpp  CommandProcessor_FFXIV.cpp  CommandProcessor_Roll.cpp
Source/Private/FunctionLibraries/: GenericStringUtils.cpp
Source/Public/: ICommandProcessor.h  MiraiCP.hpp  OtakuEventManager.h  OtakuMiraiPluginConfig.h  OtakuMiraiStructures.h  TextTable.hpp
Source/Public/CommandProcessors/: CommandProcessor_Echo.h  CommandProcessor_FFXIV.h  CommandProcessor_Roll.h
Source/Public/FunctionLibraries/: GenericStringUtils.h
single_include/MiraiCP/: MiraiCP.hpp
src/: main.cpp
